[gd_scene load_steps=28 format=3 uid="uid://b3d7628yviddv"]

[ext_resource type="Script" path="res://Scripts/TurnManager.gd" id="1_n8bal"]
[ext_resource type="Texture2D" uid="uid://brcsld272fjki" path="res://Assets/Background.png" id="1_of3bj"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="2_iki2n"]
[ext_resource type="FontFile" uid="uid://d2wv1gaq3j2so" path="res://Assets/prstart.ttf" id="2_u3vji"]
[ext_resource type="Script" path="res://Scripts/Character.gd" id="3_siv1e"]
[ext_resource type="Resource" uid="uid://bdwoc5qqaqgt3" path="res://Mythoras/Tempestrix.tres" id="6_b21p8"]
[ext_resource type="Script" path="res://Scripts/Mythora.gd" id="6_tt8yd"]
[ext_resource type="Resource" uid="uid://dhdo6t4vmpy3f" path="res://Mythoras/Galehorn.tres" id="7_2k814"]
[ext_resource type="Texture2D" uid="uid://cfbteq3dqyi4c" path="res://Sprites/Reptile.png" id="8_lx4cl"]
[ext_resource type="Resource" uid="uid://buqaywn4jj2ab" path="res://Mythoras/Geomor.tres" id="8_pi58d"]
[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="9_bckjc"]
[ext_resource type="Resource" uid="uid://b2w7huprf7jkb" path="res://Mythoras/Stormraith.tres" id="10_87nkj"]
[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="10_aa6iv"]
[ext_resource type="Resource" uid="uid://cq8gms1x8ifnr" path="res://Mythoras/Infernos.tres" id="10_kim5l"]
[ext_resource type="Texture2D" uid="uid://ciop3b51srbnb" path="res://Sprites/Dragon.png" id="11_t5dkx"]
[ext_resource type="AudioStream" uid="uid://thfacy7og7v7" path="res://Assets/Audio/Death.ogg" id="13_6bhb0"]
[ext_resource type="AudioStream" uid="uid://dykwssxpv2v8i" path="res://Assets/Audio/Fireball.ogg" id="14_00gr6"]
[ext_resource type="AudioStream" uid="uid://bbftyqrkggt27" path="res://Assets/Audio/Hit.ogg" id="15_wjgih"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yepgq"]
bg_color = Color(0.0173778, 0.0248261, 0.14604, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvj4v"]
bg_color = Color(0.0235294, 0.0235294, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ohqb"]
bg_color = Color(0.027451, 0.0392157, 0.188235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rf3r6"]
bg_color = Color(0.0173778, 0.0248261, 0.14604, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71gjr"]
size = Vector2(16, 18)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bci8w"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0n8b"]
bg_color = Color(0.172549, 0.823529, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_es7xm"]
bg_color = Color(0, 0, 0, 1)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cr72"]
bg_color = Color(0.858824, 0.266667, 0.266667, 1)

[node name="Main" type="Node" node_paths=PackedStringArray("player_character", "enemy_character")]
script = ExtResource("1_n8bal")
next_turn_delay = 0.5
player_character = NodePath("Player")
enemy_character = NodePath("Enemy")

[node name="UI" type="Control" parent="." node_paths=PackedStringArray("container", "combat_action_buttons", "mythora_swap_buttons", "mythora_team_container", "combat_actions_container", "actions_container", "action_buttons", "combat_action_button", "team_action_button", "bag_action_button", "flee_action_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_iki2n")
container = NodePath("Color_Background/Color_CombatActionsListBackground")
combat_action_buttons = [NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions/Button_CombatAction"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions/Button_CombatAction2"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions/Button_CombatAction3"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions/Button_CombatAction4")]
mythora_swap_buttons = [NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons/Button_Mythora"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons/Button_Mythora2"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons/Button_Mythora3"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons/Button_Mythora4")]
mythora_team_container = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons")
combat_actions_container = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions")
actions_container = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions")
action_buttons = [NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Combat"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Team"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Bag"), NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Flee")]
combat_action_button = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Combat")
team_action_button = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Team")
bag_action_button = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Bag")
flee_action_button = NodePath("Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions/Button_Flee")

[node name="Image_Background" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_of3bj")
expand_mode = 1
stretch_mode = 6

[node name="Color_Background" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -193.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0823529, 0.105882, 0.313726, 1)

[node name="Color_CombatActionsListBackground" type="ColorRect" parent="UI/Color_Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -87.0
offset_right = 302.0
offset_bottom = 87.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Color_Background/Color_CombatActionsListBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="Actions" type="VBoxContainer" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Button_Combat" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_yepgq")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Combat"

[node name="Button_Team" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Team"

[node name="Button_Bag" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Bag"

[node name="Button_Flee" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/Actions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Flee"

[node name="CombatActions" type="VBoxContainer" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 3

[node name="Button_CombatAction" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_yepgq")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Combat Action Display Name"

[node name="Button_CombatAction2" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Combat Action Display Name"

[node name="Button_CombatAction3" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Combat Action Display Name"

[node name="Button_CombatAction4" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/CombatActions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Combat Action Display Name"

[node name="MythoraSelectionButtons" type="VBoxContainer" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 3

[node name="Button_Mythora" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_yepgq")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Zephyros"

[node name="Button_Mythora2" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Zephyros"

[node name="Button_Mythora3" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Zephyros"

[node name="Button_Mythora4" type="Button" parent="UI/Color_Background/Color_CombatActionsListBackground/MarginContainer/MythoraSelectionButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = SubResource("StyleBoxFlat_rf3r6")
theme_override_styles/hover = SubResource("StyleBoxFlat_lvj4v")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ohqb")
text = "Zephyros"

[node name="Color_CombatTextBackground" type="ColorRect" parent="UI/Color_Background"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -615.0
offset_top = -87.0
offset_right = -15.0
offset_bottom = 87.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.215686, 0.215686, 0.215686, 0.611765)

[node name="MarginContainer" type="MarginContainer" parent="UI/Color_Background/Color_CombatTextBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CombatText" type="RichTextLabel" parent="UI/Color_Background/Color_CombatTextBackground/MarginContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_u3vji")
text = "Tempestrix used Stomp!"

[node name="Player" type="Area2D" parent="." node_paths=PackedStringArray("opponent")]
position = Vector2(164, 176)
script = ExtResource("3_siv1e")
mythora_team = Array[ExtResource("6_tt8yd")]([ExtResource("7_2k814"), ExtResource("8_pi58d"), ExtResource("10_kim5l"), ExtResource("10_87nkj")])
opponent = NodePath("../Enemy")
is_player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_71gjr")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture_filter = 1
texture = ExtResource("8_lx4cl")

[node name="HealthBar" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -88.0
offset_right = 32.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_aa6iv")

[node name="ProgressBar" type="ProgressBar" parent="Player/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_right = 49.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bci8w")
theme_override_styles/fill = SubResource("StyleBoxFlat_w0n8b")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Player/HealthBar/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 12
text = "20 / 20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy" type="Area2D" parent="." node_paths=PackedStringArray("opponent")]
position = Vector2(760, 176)
script = ExtResource("9_bckjc")
mythora_team = Array[ExtResource("6_tt8yd")]([ExtResource("6_b21p8")])
opponent = NodePath("../Player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
position = Vector2(1, 0)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_71gjr")

[node name="Sprite2D" type="Sprite2D" parent="Enemy"]
texture_filter = 1
texture = ExtResource("11_t5dkx")

[node name="HealthBar" type="Control" parent="Enemy"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -88.0
offset_right = 32.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_aa6iv")

[node name="ProgressBar" type="ProgressBar" parent="Enemy/HealthBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_right = 49.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_es7xm")
theme_override_styles/fill = SubResource("StyleBoxFlat_5cr72")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Enemy/HealthBar/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_u3vji")
theme_override_font_sizes/font_size = 12
text = "20 / 20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_6bhb0")

[node name="Fireball" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_00gr6")

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_wjgih")

[connection signal="gui_input" from="UI/Color_Background/Color_CombatTextBackground/MarginContainer/CombatText" to="UI" method="_on_combat_text_gui_input"]
